flux-cel/verify-flux-sources/.chainsaw-test/repo-good-helm.yaml
apiVersion: source.toolkit.fluxcd.io/v1beta2
kind: HelmRepository
metadata:
  name: good-helmrepo-01
spec:
  interval: 5m0s
  url: https://helmrepo.myorg.com/podinfo
---
apiVersion: source.toolkit.fluxcd.io/v1beta2
kind: HelmRepository
metadata:
  name: good-helmrepo-02
  namespace: flux-system
spec:
  interval: 5m0s
  url: https://notmyorg.github.io/podinfo
